--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -38,7 +38,8 @@ jobs:
         uses: icrawl/action-tsc@v1
 
       # Blob storage upload using SAS URL
-      - uses: bacongobbler/azure-blob-storage-upload@v1.1.1
+      - name: upload to blob
+        uses: bacongobbler/azure-blob-storage-upload@v1.1.1
         with:
           connection_string: ${{ secrets.SAS_URL }}
           container_name: '$web'
